<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="com.example.chatapplication.ui.login.LoginViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="32dp"
    android:paddingEnd="20dp"
    android:paddingBottom="32dp"
    tools:context=".ui.signup.SignupFragment">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/etUserName"
      style="@style/EditText.AuthField"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:text="@={viewModel.authUser.userName}" />

    <TextView
      android:id="@+id/txtUserNameError"
      style="@style/Text.Error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="@{viewModel.isUserNameInvalid() ? View.VISIBLE : View.GONE}" />

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/etPassword"
      style="@style/EditText.AuthField"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/password"
      android:text="@={viewModel.authUser.password}" />

    <TextView
      android:id="@+id/txtPasswordError"
      style="@style/Text.Error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="@{viewModel.isPasswordInvalid() ? View.VISIBLE : View.GONE}" />

    <Button
      android:id="@+id/btnLogin"
      style="@style/Button.ChatButtonTheme"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:backgroundTint="@color/lightGreen"
      android:onClick="@{() -> viewModel.login()}"
      android:text="@string/login" />

    <TextView
      android:id="@+id/txtSignup"
      style="@style/Text.Terms"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:focusable="true"
      android:onClick="@{() -> viewModel.goToSignUp()}"
      android:text="@string/sign_up" />

    <TextView
      style="@style/Text.Terms"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/terms_of_service" />

  </LinearLayout>
</layout>